--- a/SimpleSvm/SimpleSvm.vcxproj.filters
+++ b/SimpleSvm/SimpleSvm.vcxproj.filters
@@ -33,4 +33,7 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="SimpleSvm.ruleset" />
+  </ItemGroup>
 </Project>
